--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,11 @@
   </head>
 
   <body>
-
+    <%= render 'layouts/navbar' %>
+    
+    <div class="row" id="content">
     <%= yield %>
-
+    </div>
+  
   </body>
 </html>
